--- a/src/pages/TypingTest/typingtest.module.scss
+++ b/src/pages/TypingTest/typingtest.module.scss
@@ -4,4 +4,26 @@
   font-size: 20px;
   border-right: 1px solid var(--bg-color);
   padding: 20px 10px;
+  margin: 5px 0px;
+  border-radius: 5px;
+  transition: all 250ms ease-in;
+}
+
+.time {
+  position: absolute;
+  right: -10px;
+  top: -35px;
+  border: 2px solid var(--card-bg-color);
+  width: 50px;
+  background-color: var(--bg-color);
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 25px;
+}
+
+.code__snippet {
+  white-space: pre-wrap;
+  position: relative;
 }
