--- a/src/pages/Dashboard/dashboard.module.scss
+++ b/src/pages/Dashboard/dashboard.module.scss
@@ -26,3 +26,36 @@
   margin: 1rem;
   flex: 1;
 }
+
+$animationTime: 0.8s;
+$dotSize: 30px;
+.loader {
+  text-align: center;
+}
+.loader span {
+  display: inline-block;
+  vertical-align: middle;
+  width: $dotSize;
+  margin-right: 0.5rem;
+  height: $dotSize;
+  background: #fff;
+  border-radius: $dotSize;
+  animation: loader $animationTime infinite alternate;
+}
+.loader span:nth-of-type(2) {
+  animation-delay: 0.2s;
+}
+.loader span:nth-of-type(3) {
+  animation-delay: 0.6s;
+}
+
+@keyframes loader {
+  0% {
+    opacity: 0.9;
+    transform: scale(0.5);
+  }
+  100% {
+    opacity: 0.1;
+    transform: scale(1);
+  }
+}
