--- a/src/pages/Multiplayer/multiplayer.module.scss
+++ b/src/pages/Multiplayer/multiplayer.module.scss
@@ -1,7 +1,7 @@
 .link_div {
   margin-top: 2rem;
   border: 2px dashed var(--text-color);
-  padding: 1rem 2rem 2rem;
+  padding: 1rem 2rem 1rem;
   width: 95vw;
   max-width: 45rem;
   display: flex;
@@ -11,6 +11,6 @@
 
   h2 {
     margin-top: 0;
-    margin-bottom: 1rem;
+    // margin-bottom: 1rem;
   }
 }
